fix e-commerce spelling

--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -25,7 +25,7 @@
 -
   image: lanki.jpg
   heading: Lanki
-  meta: A website about an eccomerce business.
+  meta: A website about an e-commerce business.
   tech: HTML, CSS, Jekyll, javaScript
   source: https://planeswalker1.github.io/lanki/
   date: March 2018
