--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,14 +1,22 @@
 -
+  header: Why JavaScript Methods Are Useful
+  source: https://codinglead.github.io/javascript/why-javascript-methods-are-useful
+  imgSrc: js-logo.png
+  imgAlt: the JavaScript logo
+  meta: You can think of a method as an action that a number, string or object can perform or have taken on it.
+  date: November 21, 2018
+
+-
   header: Pseudo Selectors
-  source: https://codinglead.github.io/2018/11/14/css-pseudo-selectors/
+  source: https://codinglead.github.io/css/css-pseudo-selectors
   imgSrc: css-logo.png
   imgAlt: the CSS3 logo
   meta: CSS introduces both pseudo-elements and pseudo-classes. A pseudo-element acts like an extra element is in the code. A pseudo-class acts like an extra value for a class attribute.
-  date: November 07, 2018
+  date: November 14, 2018
 
 -
   header: GitHub Pages
-  source: https://codinglead.github.io/2018/11/07/GitHub-Pages/
+  source: https://codinglead.github.io/github/GitHub-Pages
   imgSrc: git-logo.png
   imgAlt: the git text logo
   meta: It’s more fun to make web pages when we can show them off to our friends. There are a lot of ways to put our pages online, GitHub Pages is one way.
@@ -16,7 +24,7 @@
 
 -
   header: Github Remote Repositories
-  source: https://codinglead.github.io/2018/10/31/Github-remote-repositories/
+  source: https://codinglead.github.io/github/Github-remote-repositories
   imgSrc: git-logo.png
   imgAlt: the git text logo
   meta: When we want to publish our code online (save it on the cloud so we can access it from any device), we want to store it in a remote repository. In this blog, we'll dive in to using GitHub to store our code remotely.
@@ -24,7 +32,7 @@
 
 -
   header: Tracking changes with Git
-  source: https://codinglead.github.io/2018/10/24/tracking-changes-with-git/
+  source: https://codinglead.github.io/github/tracking-changes-with-git
   imgSrc: git-logo.png
   imgAlt: the git text logo
   meta: Now that we know how to setup Git, lets see how we can track changes.
