--- a/_data/links.yml
+++ b/_data/links.yml
@@ -5,6 +5,7 @@
   imgAlt: the HTML5 logo
   meta: Well-written code follows consistent indentation and spacing patterns.  In HTML, inconsistent indentation and spacing will not impact the functionality of a website, but will cause your code to be difficult to read and understand.
   date: December 26, 2018
+  class: "img--svg"
 
 -
   header: Constructors and Prototypes
@@ -25,10 +26,12 @@
 -
   header: Key Concepts In Positioning Elements with CSS
   source: https://codinglead.github.io/javascript/key-concepts-in-positioning-elements
-  imgSrc: css3-logo.png
+  imgSrc: css3-logo.svg
   imgAlt: the CSS3 logo
   meta: CSS treats each HTML element as if it is in its own box. This box will either be a block-level box or an inline box. It has the following positioning schemes that allow you to control the layout of a page normal flow, relative positioning, and absolute positioning.
   date: December 5, 2018
+  class: "img--svg"
+
 
 -
   header: Comparing and Cloning Arrays
@@ -49,10 +52,11 @@
 -
   header: Pseudo Selectors
   source: https://codinglead.github.io/css/css-pseudo-selectors
-  imgSrc: css3-logo.png
+  imgSrc: css3-logo.svg
   imgAlt: the CSS3 logo
   meta: CSS introduces both pseudo-elements and pseudo-classes. A pseudo-element acts like an extra element is in the code. A pseudo-class acts like an extra value for a class attribute.
   date: November 14, 2018
+  class: "img--svg"
 
 -
   header: GitHub Pages
