add new blog about divs and spans

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,4 +1,12 @@
 -
+  header: Divs and spans in HTML
+  source: https://codinglead.github.io/html/divs-and-spans
+  imgSrc: html5-logo.svg
+  imgAlt: the HTML5 logo
+  meta: Classes are great for selectively applying styles to certain parts of your web pages. But sometimes you’ll have entire sections of your pages that you want to style a certain way, and adding a style to every tag gets annoying. Divs and spans can help.
+  date: February 27, 2019
+  
+-
   header: Destructuring Assignment
   source: https://codinglead.github.io/javascript/destructuring-assignment
   imgSrc: js-logo.png
