--- a/_data/links-2019.yml
+++ b/_data/links-2019.yml
@@ -1,4 +1,13 @@
 -
+  header: Key Concepts In Positioning Elements with CSS
+  source: https://codinglead.github.io/css/key-concepts-in-positioning-elements
+  imgSrc: css3-logo.svg
+  imgAlt: the CSS3 logo
+  meta: CSS treats each HTML element as if it is in its own box. This box will either be a block-level box or an inline box. It has the following positioning schemes that allow you to control the layout of a page normal flow, relative positioning, and absolute positioning.
+  date: July 10, 2019
+  class: "img--svg"
+
+-
   header: Rest Operator In JavaScript
   source: https://codinglead.github.io/javascript/rest-operator-in-js
   imgSrc: js-logo.png
