--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,4 +1,12 @@
 -
+  header: The best way to organize JavaScript
+  source: https://codinglead.github.io/javascript/the-best-way-to-organize-javascript
+  imgSrc: js-logo.png
+  imgAlt: the JavaScript logo
+  meta: Well-organized code can be easier to debug, and easier to revisit later. Let's make sure we understand how to organize our code using the best practices.
+  date: August 14, 2019
+
+-
   header: What is Destructuring Assignment
   source: https://codinglead.github.io/javascript/what-is-destructuring-assignment
   imgSrc: js-logo.png
@@ -165,14 +173,6 @@
   imgAlt: the JavaScript logo
   meta: In this blog, we’re going to explore how JavaScript uses constructors as blueprints for the creation of many new objects, and prototypes for adding methods to objects.
   date: December 19, 2018
-
--
-  header: The best way to organize JavaScript
-  source: https://codinglead.github.io/javascript/the-best-way-to-organize-javascript
-  imgSrc: js-logo.png
-  imgAlt: the JavaScript logo
-  meta: Well-organized code is easier to debug, it appears more professional, and is easier to revisit later. Let's make sure we understand how to organize our code using the best, most professional practices.
-  date: December 12, 2018
 
 -
   header: Why JavaScript Methods Are Useful
